Creating the Orders Page Updated the Pagination.

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <section class="container">
         <h2>About Us</h2>
         <div id="section-container">
-            <div id="prod1" class="content">
+            <div id="prod1" class="contents">
             <img src="E:\BackEnd\EcommerceWebsite\imageAbout.jpg" height="200px" width="200px" style="float:left;border-radius: 50%;border-style:dotted;">
             <div style="justify-content:center;text-align:center;font-size:20px;margin:25px;">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, enim asperiores earum fugiat suscipit sunt cupiditate veritatis, exercitationem illum animi ab eius sint, eligendi ipsum placeat possimus voluptate provident id.
