--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <section class="container">
         <h2>Tours</h2>
         <div id="section-container">
-            <div id="prod1" class="content">
+            <div id="prod1" class="contents">
             <div style="justify-content:center;text-align:center;font-size:20px;margin:25px;">
                 <table>
                     <tr>
