--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
     <link rel="stylesheet" href="E:\BackEnd\EcommerceWebsite\main.css">
+
 </head>
 <body>
     <header>
@@ -13,12 +14,13 @@
             <ul>
                 <li><a href="E:\BackEnd\EcommerceWebsite\home.html">Home</a></li>
                 <li><a href="E:\BackEnd\EcommerceWebsite\index.html">Store</a></li>
-                <li class="active">About</li>
+                <li><a href="E:\BackEnd\EcommerceWebsite\order.html">Past Orders</a></button></li>
+                <li class="active" style="color:rgb(93, 26, 106);">About</li>
             </ul>
         </nav>
         <h1>The Generics</h1>
     </header>
-
+    
     <section class="container">
         <h2>About Us</h2>
         <div id="section-container">
