--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <nav>
                     <ul>
                         <li><a href="E:\BackEnd\EcommerceWebsite\home.html">Home</a></li>
-                        <li>Store</li>
+                        <li style="color:rgb(93, 26, 106);">Store</li>
+                        <li><a href="E:\BackEnd\EcommerceWebsite\order.html">Past Orders</button></li>
                         <li><a href="E:\BackEnd\EcommerceWebsite\about.html">About</a></li>
 
                         <li>
