--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav>
                     <ul>
                         <li><a href="E:\BackEnd\EcommerceWebsite\home.html">Home</a></li>
-                        <li style="color:rgb(93, 26, 106);">Store</li>
+                        <li style="color:rgb(158, 87, 172);">Store</li>
                         <li><a href="E:\BackEnd\EcommerceWebsite\order.html">Past Orders</button></li>
                         <li><a href="E:\BackEnd\EcommerceWebsite\about.html">About</a></li>
 
@@ -27,7 +27,7 @@
                 <h1>The Generics</h1>
             </header>
             <section id="music" class="container">
-                <h2>MUSIC</h2>
+                <h2>S T O R E</h2>
                 <div id="section-container">
                     <!-- <div class='show' id='showAll'>
 
@@ -45,7 +45,7 @@
                 <h2>My CART</h2>
                 <div class="total">
                     <div class="Cpagination" id="Cpagination">
-                        <button class="cButton cActive">1</button>
+                        <!-- <button class="cButton cActive">1</button> -->
                         <!-- <button class="cButton">2</button> -->
                     </div>
                     
